--- a/admin/package.json
+++ b/admin/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "antd": "^5.27.6",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "react": "18.2.0",
