--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
     "slugify": "^1.6.6",
     "stripe": "^17.5.0",
     "uuid": "^13.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   },
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
@@ -68,16 +73,11 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
-    "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
     "cross-env": "^10.0.0",
     "kill-port": "^2.0.1",
     "mocha": "^10.8.2",
-    "postcss": "^8.5.6",
-    "supertest": "^6.3.3",
-    "tailwindcss": "^3.4.17"
+    "supertest": "^6.3.3"
   }
 }
