--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sendgrid/mail": "^8.1.6",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
@@ -25,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
@@ -34,13 +39,9 @@
     "react-scripts": "5.0.1",
     "slugify": "^1.6.6",
     "stripe": "^17.5.0",
+    "tailwindcss": "^3.4.17",
     "uuid": "^13.0.0",
-    "web-vitals": "^2.1.4",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.19",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
